samples/_failures_safe/1761076924_6acac1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98a9d421.c: In function ‘main’:
./samples/SAFE/__tmp_98a9d421.c:160:13: error: expected declaration or statement at end of input
  160 |             return 1;
      |             ^~~~~~
./samples/SAFE/__tmp_98a9d421.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98a9d421.c:160:13: error: expected declaration or statement at end of input
